<resources>
    <string name="app_name">LyricsFinder</string>
    <string name="enter_song">Search lyrics by artist and title :</string>
    <string name="inputArtist">Artist…</string>
    <string name="inputTitle">Title…</string>
    <string name="btnSearch">Find lyrics</string>
    <string name="lyrics_404">Unable to find lyrics for this song</string>
    <string name="internet_issue">Connectivity error : are you connected to the Internet ?</string>
    <string name="favorites">Favorites</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="settings_appearance">Appearance</string>
    <string name="settings_font_size">Font size</string>
    <string name="settings_font_size_desc">Change lyrics font size</string>
    <string name="small_font">Small</string>
    <string name="medium_font">Medium</string>
    <string name="large_font">Large</string>
    <string name="settings_privacy">Privacy</string>
    <string name="settings_history">Save searches to history</string>
    <string name="settings_history_desc">Disable this to keep your searches private</string>
    <string name="empty_history">Search history is empty</string>
    <string name="clear_history">Clear history</string>
    <string name="cleared_history_notification">History has been cleared</string>
    <string name="empty_favorites">No favorites, add favorites to access lyrics while offline</string>
    <string name="favs_add">Add to favorites</string>
    <string name="favs_del">Remove from favorites</string>
    <string name="favs_add_notification">Added to favorites</string>
    <string name="favs_del_notification">Removed from favorites</string>

</resources>
