<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
            android:title="@string/settings_privacy">

        <SwitchPreference
                android:key="historyEnabled"
                android:defaultValue="true"
                android:title="@string/settings_history"
                android:summary="@string/settings_history_desc"
        />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_appearance">
        <ListPreference
                android:key="fontSize"
                android:title="@string/settings_font_size"
                android:summary="@string/settings_font_size_desc"
                android:entries="@array/fontSize"
                android:entryValues="@array/fontSizeValues"
                android:defaultValue="14"
        />
    </PreferenceCategory>
</PreferenceScreen>