<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_song"
            android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="44dp"/>

    <AutoCompleteTextView
            android:layout_width="287dp"
            android:layout_height="46dp"
            android:ems="10"
            android:id="@+id/main_inputArtist"
            android:hint="@string/inputArtist"
            android:inputType="textCapWords"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.505" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="52dp" app:layout_constraintTop_toBottomOf="@+id/textView"/>

    <AutoCompleteTextView
            android:layout_width="287dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/main_inputTitle"
            android:hint="@string/inputTitle"
            android:inputType="textCapWords"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/main_inputArtist"/>

    <Button
            android:text="@string/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:id="@+id/main_btnSearch"
            android:onClick="btnClick"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/main_inputTitle"/>


</android.support.constraint.ConstraintLayout>